--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,12 +11,24 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v4
+
+      - name: Install Rust nightly
+        run: |
+          rustup toolchain install nightly --component rust-src
+          rustup default nightly
+
+      - name: Install QEMU
+        run: sudo apt-get update && sudo apt-get install -y qemu-system-x86
+
+      - name: Build kernel
+        run: cargo build --release -Z build-std=core,compiler_builtins --target src/arch/x86_64/x86_64-unknown-none.json
+
+      - name: Run in QEMU (no boot-loop test)
+        run: |
+          timeout --kill-after=5s 3s \
+          qemu-system-x86_64 -drive format=raw,file=target/x86_64-unknown-none/release/lex-kernel,readonly \
+          -nographic -serial stdio || [ $? -eq 124 ]   # 124 = timeout OK
+
