--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,10 +25,15 @@ jobs:
 
       - name: Build kernel
         run: cargo build --release -Z build-std=core,compiler_builtins --target src/arch/x86_64/x86_64-unknown-none.json
+      - name: Strip ELF → raw kernel image
+        run: |
+          rust-objcopy -O binary \
+            target/x86_64-unknown-none/release/lex-kernel \
+            target/x86_64-unknown-none/release/kernel.bin
 
       - name: Run in QEMU (no boot-loop test)
         run: |
           timeout --kill-after=5s 3s \
-          qemu-system-x86_64 -drive format=raw,file=target/x86_64-unknown-none/release/lex-kernel,readonly \
+          qemu-system-x86_64 -drive format=raw,file=target/x86_64-unknown-none/release/kernel.bin,readonly \
           -nographic -serial stdio || [ $? -eq 124 ]   # 124 = timeout OK
 
