--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,7 +24,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y qemu-system-x86
 
       - name: Build kernel
-        run: cargo build --release -Z build-std=core,compiler_builtins --target src/arch/x86_64/x86_64-unknown-none.jason
+        run: cargo build --release -Z build-std=core,compiler_builtins --target src/arch/x86_64/x86_64-unknown-none.json
       - name: Strip ELF → raw kernel image
         run: |
           rust-objcopy -O binary \
