--- a/src/arch/x86_64/x86_64-unknown-none.json
+++ b/src/arch/x86_64/x86_64-unknown-none.json
@@ -12,5 +12,5 @@
   "linker": "rust-lld",
   "panic-strategy": "abort",
   "disable-redzone": true,
-  "features": "-mmx,-sse"
+  "features": "-mmx",
 }
