--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,10 +36,11 @@ jobs:
       - name: Check kernel.bin exists
         run: ls -lh target/x86_64-unknown-none/release/kernel.bin
 
-      - name: Run in QEMU (no boot-loop test)
-        run: |
+         - name:Run in QEMU (expect triple-fault timeout)  
+          run:|
           timeout --kill-after=5s 3s \
-          qemu-system-x86_64 -drive format=raw,file=target/x86_64-unknown-none/release/kernel.bin,readonly=on \
+          qemu-system-x86_64 -fda target/x86_64-unknown-none/release/kernel.bin \
           -nographic || [ $? -eq 124 ]
+
 
 
