--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,21 +25,17 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y qemu-system-x86 llvm
 
-
       - name: Build kernel
         run: cargo build --release -Z build-std=core,compiler_builtins --target src/arch/x86_64/x86_64-unknown-none.json
+
       - name: Strip ELF → raw kernel image
         run: |
           llvm-objcopy -O binary \
             target/x86_64-unknown-none/release/lex-kernel \
             target/x86_64-unknown-none/release/kernel.bin
+
       - name: Check kernel.bin exists
         run: ls -lh target/x86_64-unknown-none/release/kernel.bin
-      - name: Run in QEMU (expect triple-fault timeout)
-        run: timeout 3s qemu-system-x86_64 -fda target/x86_64-unknown-none/release/kernel.bin -nographic || [ $? -eq 124 ]
 
-
-        
-
-
-
+      - name: Run in QEMU (multiboot)
+        run: timeout 3s qemu-system-x86_64 -kernel target/x86_64-unknown-none/release/lex-kernel -nographic || [ $? -eq 124 ]
