--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,5 +37,6 @@ jobs:
       - name: Check kernel.bin exists
         run: ls -lh target/x86_64-unknown-none/release/kernel.bin
 
-      - name: Run in QEMU (multiboot)
-        run: timeout 3s qemu-system-x86_64 -kernel target/x86_64-unknown-none/release/lex-kernel -nographic || [ $? -eq 124 ]
+      - name: Run in QEMU (multiboot floppy)
+        run: timeout 3s qemu-system-x86_64 -boot c -drive file=target/x86_64-unknown-none/release/lex-kernel,format=raw,if=floppy -nographic || [ $? -eq 124 ]
+
