--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,6 +35,15 @@ jobs:
             target/x86_64-unknown-none/release/kernel.bin
 
       - name: Check kernel.bin exists
+      - name: Build boot sector
+        run: |
+          clang -m32 -c src/arch/x86_64/bootsector.S -o target/x86_64-unknown-none/release/bootsector.bin
+          chmod +x src/arch/x86_64/post-link.sh
+          src/arch/x86_64/post-link.sh target/x86_64-unknown-none/release lex-kernel
+
+      - name: Run in QEMU (boot sector → kernel)
+        run: timeout 3s qemu-system-x86_64 -fda target/x86_64-unknown-none/release/floppy.img -nographic || [ $? -eq 124 ]
+
         run: ls -lh target/x86_64-unknown-none/release/kernel.bin
 
       - name: Run in QEMU (multiboot floppy)
