--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,9 +28,14 @@ jobs:
       - name: Build kernel
         run: cargo build --release -Z build-std=core,compiler_builtins --target src/arch/x86_64/x86_64-unknown-none.json
 
-      - name: Build boot sector
+      - name: Build 16-bit boot sector
+        run: clang -m16 -c src/arch/x86_64/bootsector.S -o target/x86_64-unknown-none/release/bootsector.o
+
+      - name: Link boot sector flat binary
+        run: ld -m elf_i386 -Ttext 0x7C00 --oformat binary target/x86_64-unknown-none/release/bootsector.o -o target/x86_64-unknown-none/release/bootsector.bin
+
+      - name: Stitch floppy image
         run: |
-          clang -m32 -c src/arch/x86_64/bootsector.S -o target/x86_64-unknown-none/release/bootsector.bin
           chmod +x src/arch/x86_64/post-link.sh
           src/arch/x86_64/post-link.sh target/x86_64-unknown-none/release lex-kernel
 
